# RAG_discord_bot_hsnu

./: README.md  detailed_guides.md  docs.json  docs.txt  drawio_xml_flowchart.txt.drawio.xml  example.env  generate_response.py  google_map.py  location.json  main.py  nasa.py  pyproject.toml  rag_engine.py  rag_for_location.py  requirements.txt  資料缺失.txt
